# CPlus-IDE

./: AboutAppWindow.qml  App.qml  Button.qml  CMakeCache.txt  CMakeLists.txt  CheckBox.qml  ComponentNames.hpp  ExternalVariable.h  FileController.hpp  IWindowTheme.cpp  ImageButton.qml  LeftMenu.qml  Main.qml  RightMenu.qml  SettingsWindow.qml  StartWindow.qml  TxtInput.qml  UpperLevelMenu.qml  UtilFuncs.cpp  UtilFuncs.hpp  componentfactory.cpp  componentfactory.h  elementfactory.cpp  elementfactory.hpp  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pagecontroller.cpp  pagecontroller.hpp  settingswindow.cpp  settingswindow.hpp  startwindow.cpp  startwindow.h
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: BaseTest.hpp  NegativeTests.cpp  PositiveTests.cpp
trash/: ExternalVariables.h  FileController.hpp  IdeSettings.hpp  componentfactory.cpp  logger.hpp
